# AXION-V1

./: .coverage  .env  .env.example  .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  replit.md  requirements.txt  summary_of_changes.md
.agents/memory/: MEMORY.md  directional-scoring-bias.md  exchange-manager-integration.md
.github/workflows/: ci.yml  scan.yml
analysis/indicators/: engine.py
analysis/smc/: engine.py
backtesting/: engine.py  paper_trading.py
config/: settings.py
core/: events.py  logging.py
data/: axion_quant.db
database/: manager.py
exchange/: __init__.py  adapter_manager.py  base.py  bitget.py  bitget_client.py  bybit.py  gate.py  gateio_client.py  manager.py  mexc.py  mexc_client.py  okx.py  okx_client.py
hybrid_ml/: __init__.py  gradient_booster.py  pipeline.py  rl_agent.py
market_data/: pipeline.py
ml/: engine.py
models/: model_xgboost_20260717_151837.pkl  model_xgboost_20260717_152007.pkl  model_xgboost_20260717_152254.pkl
notifications/: __init__.py  bot.py
risk/: engine.py
scanner/: __init__.py  symbol_scanner.py
signal_engine/: engine.py
strategy/: __init__.py  profile_manager.py
telegram/: bot.py
tests/: test_axion_quant.py  test_exchange_adapter.py
